<resources>
    <string name="app_name">CatonPublisher</string>

    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="caton">caton</string>
    <string name="main_title_left">Broadcast</string>
    <string name="main_setting">Settings</string>
    <string name="count_down_text">Countdown</string>
    <string name="text_0s">0s</string>
    <string name="text_3s">3s</string>
    <string name="text_5s">5s</string>
    <string name="text_10s">10s</string>
    <string name="text_cover">Pause Matte</string>
    <string name="text_black">Black</string>
    <string name="text_gray">Gray</string>
    <string name="text_white">White</string>
    <string name="text_own">Custom</string>
    <string name="text_show_time">Time Overlay</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_danmu">Text Overlay</string>
    <string name="danmu_content">Overlay Text</string>
    <string name="service_provider">Service Provider</string>
    <string name="service_name">Service Name</string>
    <string name="text_store">Save</string>
    <string name="live_name">Broadcast Name</string>
    <string name="live_title">Live</string>
    <string name="must_fill">*</string>
    <string name="live_net_url">Server Address</string>
    <string name="live_port">Port</string>
    <string name="live_mbps">Bit rate(mbps)</string>
    <string name="live_secret_key">Stream Key</string>
    <string name="live_desc">Description</string>
    <string name="show_debug">Debug Info</string>
    <string name="text_code">Codec</string>
    <string name="text_avc">AVC</string>
    <string name="text_hevc">HEVC</string>
    <string name="live_push_stream">Format</string>
    <string name="text_480p">480p</string>
    <string name="text_720p">720p</string>
    <string name="text_1080p">1080p</string>
    <string name="text_2160p">2160p</string>
    <string name="live_fps">Frame rate</string>
    <string name="text_15">15</string>
    <string name="text_25">25</string>
    <string name="text_30">30</string>
    <string name="text_50">50</string>
    <string name="text_audio_code">Encryption</string>
    <string name="text_none">None</string>
    <string name="text_aes_128">AES_128</string>
    <string name="text_aes_256">AES_256</string>
    <string name="text_back">Back</string>
    <string name="text_delete">Delete</string>
    <string name="text_store_success">Save Success</string>
    <string name="text_notice_title_empty">Live name cannot be empty</string>
    <string name="text_notice_net_empty">Live server address cannot be empty</string>
    <string name="text_notice_port_empty">Live server port cannot be empty</string>
    <string name="text_notice_mbps_empty">Live video bit rate cannot be empty</string>
    <string name="live_setting">Settings</string>
    <string name="live_ready">READY</string>
    <string name="live_finish">FINISH</string>
    <string name="live_time">00:00</string>
    <string name="app_right">Copyright @ 2020 Caton All rights reserved</string>
    <string name="dialog_confirm_delete_text">Delete or not</string>
    <string name="dialog_confirm_delete_message_text">Data cannot be recovered after deletion</string>
    <string name="dialog_confirm_text">OK</string>
    <string name="dialog_normal_more_button_text">Confirm to exit？</string>
    <string name="dialog_btn_confirm_hint_text">Confirm</string>
    <string name="dialog_btn_cancel_hint_text">Cancel</string>
    <string name="no_connect_server">Connecting...</string>
    <string name="add_live">Add Broadcast</string>
    <string name="camera_per">camera</string>
    <string name="recording_per">recording</string>
    <string name="warm_prompt">Warm prompt</string>
    <string name="per_camera_notice">We need a camera permission to use this function properly</string>
    <string name="verify_permissions">Verify permissions</string>
</resources>
