<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    tools:context=".activity.Camera2Activity">

    <com.saisai.catonpublisher.camera.WlCameraView
        android:id="@+id/previewSurface"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/view_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#000000"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/ll_control_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/place_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ll_land_control_container"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/select_text_color"
            android:layout_width="0dp"
            android:layout_height="20dp"/>
        <RelativeLayout
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ll_land_control_container"
            app:layout_constraintTop_toBottomOf="@id/place_view"
            android:background="@color/select_text_color"
            android:id="@+id/rl_title"
            android:layout_width="0dp"
            android:layout_height="30dp">
            <FrameLayout
                android:id="@+id/iv_back"
                android:layout_marginStart="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/iv_back_icon"
                    android:layout_gravity="center"
                    android:background="@drawable/iv_back_selector"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    tools:ignore="ContentDescription" />
            </FrameLayout>
            <TextView
                android:id="@+id/tv_title"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:text="@string/live_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_setting"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/live_setting"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:textColor="@drawable/text_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/layout_debug"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_droprate"
                android:textColor="#e21ed9"
                android:text="dropRate:0.0%"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_bitrate"
                android:textColor="#e21ed9"
                android:text="bitrate:0bps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_jitter"
                android:textColor="#e21ed9"
                android:text="jitter:0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_rtt"
                android:textColor="#e21ed9"
                android:text="rtt:0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_maxdelay"
                android:textColor="#e21ed9"
                android:text="maxDelay:0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_live_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_title"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:background="@drawable/live_text_back_shape_raidus"
            tools:text="直播1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/live_danmu_text_color"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Chronometer
            android:id="@+id/tv_time"
            app:layout_constraintRight_toLeftOf="@id/ll_land_control_container"
            app:layout_constraintTop_toBottomOf="@id/rl_title"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:format="%s"
            android:background="@drawable/live_text_back_shape_raidus"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/live_danmu_text_color"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_danmu"
            app:layout_constraintRight_toLeftOf="@id/ll_land_control_container"
            app:layout_constraintTop_toBottomOf="@id/tv_time"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:background="@drawable/live_text_back_shape_raidus"
            tools:text="弹幕"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/live_danmu_text_color"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/trans_camera"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/trans_camera"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/ll_control_container"
            android:background="@drawable/live_text_back_shape_raidus"
            tools:ignore="ContentDescription" />
        <ImageView
            android:id="@+id/ib_switch"
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:layout_constraintRight_toLeftOf="@id/ll_land_control_container"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/trans_screen"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/ll_control_container"
            android:background="@drawable/live_text_back_shape_raidus"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:id="@+id/ll_control_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="44dp">
            <ImageView
                android:id="@+id/iv_image_audio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/live_image_button_back_color"
                android:src="@drawable/audio_image"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />
            <ImageView
                android:id="@+id/iv_image_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/live_image_button_back_color"
                android:src="@drawable/video_image"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/btn_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/select_text_color"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:gravity="center"
                android:text="@string/live_ready"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_land_control_container"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:layout_width="60dp"
            android:layout_height="0dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/select_text_color"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/btn_land_start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="#ffffff"
                    android:gravity="center"
                    android:text="@string/live_ready"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    tools:ignore="ContentDescription" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/live_image_button_back_color"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/iv_land_image_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/video_image"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    tools:ignore="ContentDescription" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/live_image_button_back_color"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/iv_land_image_audio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/audio_image"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/count_text"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/count_down_text_shape"
        android:gravity="center"
        tools:text="9"
        android:textColor="@color/white"
        android:textSize="200sp"
        android:visibility="gone"
        />


</android.support.constraint.ConstraintLayout>
